prepare to migrate
git-svn-id: https://vavi-commons.googlecode.com/svn/trunk@17 a081c7a2-b565-11de-b08c-ffe21702e5b5